# rust-raytrace

./: .gitignore  Cargo.toml  README.md
examples/: gfx-rs.rs  gl-rs.rs  ogl.rs
src/: input.rs  main.rs  physics.rs
src/gfx/: camera.rs  mod.rs  object.rs  rectangle.rs  render.rs  shader.rs
src/physics/: mod.rs
src/shaders/: fragment.glsl  vertex.glsl
src/shapes/: axes.rs  cube.rs  mod.rs  rectangle.rs
