[package]
name = "raytrace"
version = "0.1.0"
features = ["gfx"]
edition = "2018"
build = "build.rs"

[dependencies]
rand = "0.7.3"
gl = "0.14.0"
nalgebra = "0.21.0"
gfx = "0.18.2"
gfx_window_sdl = "0.9.1"

[dependencies.sdl2]
version = "0.32.0"
default-features = false
features = ["gfx"]

[[example]]
name = "gl-rs"

[[example]]
name = "gfx-rs"
